# xcavate_loan_contract

./: Cargo.toml  LICENSE  README.md
contracts/lending/: Cargo.toml  lib.rs
contracts/loan/: Cargo.toml  lib.rs
traits/: lending.rs  loan.rs
uniques_extension/: Cargo.toml
uniques_extension/src/: lib.rs
