[package]
name = "loan"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false, features = ["call-runtime"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

xcavate_lending_protocol = { path = "../..", default-features = false }
openbrush = { version = "4.0.0-beta", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable", "access_control"] }

sp-io = { version = "22.0.0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "23.0.0", default-features = false }


[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "xcavate_lending_protocol/std",
    "sp-runtime/std",
    "sp-io/std",
]
ink-as-dependency = []
e2e-tests = []

permissive-node = []